# ammonia

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-MIT  README.md  RELEASE_PROCESS.md  SECURITY.md  build.rs
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: main.yml
benchmarks/: Cargo.toml  bleach_bench.py
benchmarks/src/: main.rs
examples/: ammonia-cat.rs
src/: lib.rs  list  list2  rcdom.rs  style.rs
